movie container formatting; overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+.App {
+  min-height: 100vh;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+}
+
 .titleBar {
-  background-color: #ffffff;
-  color: rgb(63, 56, 56);
+  color: rgb(219, 218, 218);
   font-size: 18;
   height: 10%;
   width: 100% !important;
@@ -8,19 +12,19 @@
   margin: 0px !important;
 }
 
-.logoImage {
+.logo {
+  font-size: 80px;
   width: auto;
-  margin: 10% 20% !important;
-  padding: 20px !important;
+  margin: 10% 10% !important;
   height: 90px !important;
 }
 
-#title {
+#site-name {
   /* font-family: "Calibri" !important; */
   text-decoration: bold;
   display: inline !important;
   font-size: 40px !important;
-  padding: 20px 15px !important;
+  padding: 20px 1px !important;
   margin: auto !important;
   color: rgb(71, 71, 71) !important;
   
@@ -42,12 +46,33 @@
 
 .movieContainer {
   margin-top: 15px !important;
-  margin-left: 5% !important;
-  width: 90%
+  max-width: 500px !important;
+  height: 40vh !important;
+  margin: 10px;
+  display: inline-flex !important;
+  justify-content: center !important;
+  align-items: center !important; 
+  /* border-style: solid !important;
+  border-color: grey !important; */
 }
 
 .movieInfo {
+  display: flex !important;
+  justify-content: space-around !important;
+  flex-wrap: wrap !important;
   margin: 20px !important;
+  height: 200px !important;
+
+}
+
+.movie-title {
+  font-size: 25px !important;
+}
+
+.info-text {
+  text-overflow: ellipsis !important;
+  overflow: auto !important;
+  height: 90px;
 }
 
 .errorMessage {
